--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.554.0",
     "uuid": "^13.0.0",
     "react": "^19.2.0",
-    "@google/genai": "^1.35.0"
+    "@google/genai": "^1.35.0",
+    "firebase": "^12.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
